Store logs in table (derbydb) and some value/uuid to check.

--- a/src/main/resources/org/talend/components/lifecycle/dataset/Messages.properties
+++ b/src/main/resources/org/talend/components/lifecycle/dataset/Messages.properties
@@ -1,3 +1,8 @@
 LifeCycleAnalysis.dataset.LifeCycleAnalysisDataSet._displayName = Life Cycle Analysis dataSet
-
 LifeCycleAnalysisDataSet.datastore._displayName = datastore
+LifeCycleAnalysisDataSet.jdbcURL._displayName = JDBC URL
+LifeCycleAnalysisDataSet.jdbcURL._placeholder =
+LifeCycleAnalysisDataSet.schema._displayName = Table schema
+LifeCycleAnalysisDataSet.schema._placeholder =
+LifeCycleAnalysisDataSet.table._displayName = Table name
+LifeCycleAnalysisDataSet.table._placeholder =
