--- a/src/main/resources/org/talend/components/lifecycle/output/Messages.properties
+++ b/src/main/resources/org/talend/components/lifecycle/output/Messages.properties
@@ -1,3 +1,5 @@
 LifeCycleAnalysis.LifeCycleAnalysisOutput._displayName = Life Cycle Analysis Output
 
 LifeCycleAnalysisOutputConfiguration.dataSet._displayName = DataSet
+LifeCycleAnalysisOutputConfiguration.val._displayName = Fixed value
+LifeCycleAnalysisOutputConfiguration.val._placeholder =
