--- a/src/main/resources/org/talend/components/lifecycle/output/Messages.properties
+++ b/src/main/resources/org/talend/components/lifecycle/output/Messages.properties
@@ -3,3 +3,6 @@ LifeCycleAnalysis.LifeCycleAnalysisOutput._displayName = Life Cycle Analysis Out
 LifeCycleAnalysisOutputConfiguration.dataSet._displayName = DataSet
 LifeCycleAnalysisOutputConfiguration.val._displayName = Fixed value
 LifeCycleAnalysisOutputConfiguration.val._placeholder =
+
+LifeCycleAnalysisOutputConfiguration.table._displayName = Table name
+LifeCycleAnalysisOutputConfiguration.table._placeholder =
