--- a/src/main/resources/org/talend/components/lifecycle/source/Messages.properties
+++ b/src/main/resources/org/talend/components/lifecycle/source/Messages.properties
@@ -4,3 +4,10 @@ LifeCycleAnalysisInputConfiguration.dataSet._displayName = DataSet
 LifeCycleAnalysisInputConfiguration.maxDuration._displayName = Max duration (s ; 0 = infinity)
 LifeCycleAnalysisInputConfiguration.recordsToGenerate._displayName = Records to generate per worker (0 = infinity)
 LifeCycleAnalysisInputConfiguration.splits._displayName = Number of workers
+LifeCycleAnalysisInputConfiguration.val._displayName = Fixed value
+LifeCycleAnalysisInputConfiguration.val._placeholder =
+
+LifeCycleAnalysisInputConfiguration.table_input._displayName = Table input name
+LifeCycleAnalysisInputConfiguration.table_input._placeholder =
+LifeCycleAnalysisInputConfiguration.table_mapper._displayName = Table mapper name
+LifeCycleAnalysisInputConfiguration.table_mapper._placeholder =
